<resources>
    <string name="app_name">ARDesign</string>
    <string name="title_activity_creation_compte">CreationCompteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mesure_btn_text">Mesure</string>
    <string name="visualisation_btn_text">Visualisation</string>
    <string name="id_category">Identifiants</string>
    <string name="preference_last_name">Nom</string>
    <string name="preference_first_name">Prénom</string>
    <string name="preference_mail">Mail</string>
    <string name="preference_pass">Mot de passe</string>
</resources>